<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"/>
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:dialogTitle="@string/pref_units_label"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default" />
    <CheckBoxPreference
        android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_label"
        android:summaryOff="@string/pref_notification_false"
        android:summaryOn="@string/pref_notification_true"
        android:defaultValue="@string/pref_notification_default" />
</PreferenceScreen>